--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "astro": "^1.1.8",
-    "astro-seo": "^0.6.0"
+    "astro-seo": "^0.6.0",
+    "astro-seo-meta": "^1.0.1"
   }
 }
