--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "@example/basics",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "astro dev",
-        "start": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview",
-        "astro": "astro"
-    },
-    "dependencies": {
-        "astro": "^4.3.1"
-    }
+  "name": "@rigon",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "astro": "^4.3.1"
+  },
+  "engines": {
+    "node": "22.x"
+  }
 }
