feat: rename package and update dependencies
- Changed package name from "@rigon" to "rigon-website".
- Updated Astro dependency from "^4.3.1" to "^5.0.0".

refactor: enhance ClientCard component

- Updated image loading to use native lazy loading.
- Cleaned up HTML structure.

refactor: improve Header component

- Replaced hardcoded contact and social links with dynamic values from site configuration.
- Enhanced accessibility and SEO attributes.

refactor: update ServiceCard component

- Improved HTML structure for better readability.

feat: add site configuration file

- Created site.config.ts to centralize site information, contact details, social media links, SEO settings, and navigation.

refactor: modify Layout component

- Updated HTML structure and language attribute.
- Improved SEO meta tags and canonical links.

fix: enhance service detail page

- Added loading attribute to images for better performance.
- Improved error handling with NotFound component.

feat: add custom transitions for animations

- Implemented view transitions for smoother animations across the site.
- Added keyframes for various animation effects.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rigon",
+  "name": "rigon-website",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.1"
+    "astro": "^5.0.0"
   },
   "engines": {
     "node": "22.x"
